--- a/contact.html
+++ b/contact.html
@@ -235,7 +235,7 @@
 
     <h3>Step 2: Submit the Registration Form</h3>
     <p>After completing the payment, you’ll receive a <strong>Transaction ID</strong> from your payment app. Note this ID carefully and enter it in the <strong>registration form</strong> linked below. Ensure all details are correct before submitting the form.</p>
-    <p>Once submitted, your registration details will be verified manually. Incorrect or incomplete information may result in disqualification. Photon Physics is not responsible for errors in submission.</p>
+    <p>Once submitted, your registration details will be verified manually. Incorrect or incomplete information may result in disqualification. Chronex Classes is not responsible for errors in submission.</p>
 
     <a href="https://forms.gle/SUjNrpK7rSeEvr4v5" target="_blank" class="register-button">Fill Registration Form</a>
 
