--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#e8d4f3">
   <!-- Corrected Icon Path -->
-  <link rel="icon" type="image/png" href="https://placehold.co/512x512/7851A9/FFFFFF?text=CC" />
+  <link rel="icon" type="image/png" href="Logo%20(2).png" />
   
   <!-- Load Tailwind CSS for modern, responsive styling -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -202,7 +202,7 @@
 <header>
   <div class="flex items-center">
     <!-- Standardized placeholder logo -->
-    <img src="https://placehold.co/50x50/7851A9/FFFFFF?text=CC" alt="Chronex Classes Logo" />
+    <img src="Logo%20(2).png" alt="Chronex Classes Logo" />
     <h2>Chronex Classes</h2>
   </div>
 
