--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#e8d4f3">
     <!-- Corrected Icon Path -->
-    <link rel="icon" type="image/png" href="https://placehold.co/512x512/7851A9/FFFFFF?text=CC" />
+    <link rel="icon" type="image/png" href="Logo%20(2).png" />
     
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -268,7 +268,7 @@
 <header class="shadow-md">
     <div class="flex items-center">
         <!-- Standardized placeholder logo -->
-        <img src="https://placehold.co/50x50/7851A9/FFFFFF?text=CC" alt="Chronex Classes Logo" />
+        <img src="Logo%20(2).png" alt="Chronex Classes Logo" />
         <h2>Chronex Classes</h2>
     </div>
 
@@ -280,7 +280,7 @@
 
     <!-- Desktop Nav with corrected links -->
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Resources.html">Resources</a>
         <a href="Courses.html">Course Details</a>
         <a href="Contact.html" class="active">Registration & Contact</a>
@@ -288,7 +288,7 @@
 
     <!-- Mobile Dropdown with corrected links -->
     <div id="mobileMenu" class="mobile-menu">
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Resources.html">Resources</a>
         <a href="Courses.html">Course Details</a>
         <a href="Contact.html" class="active">Registration & Contact</a>
