--- a/Resources.html
+++ b/Resources.html
@@ -236,7 +236,7 @@
 
 <main class="container">
   <h1 class="text-3xl sm:text-4xl text-center mt-2 mb-4 font-extrabold text-[#7851a9]">
-    📚 Essential Physics Resources
+    Essential Physics Resources
   </h1>
   <p class="text-center text-lg mb-8">
     Access our curated list of key textbooks and practice materials, completely free to support your learning journey.
@@ -313,4 +313,5 @@
 </script>
 
 </body>
+
 </html>
