--- a/Class 11 2027-2028 chapters.html
+++ b/Class 11 2027-2028 chapters.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#e8d4f3">
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#e8d4f3">
-  <link rel="icon" type="image/png" href="https://placehold.co/512x512/7851A9/FFFFFF?text=CC" />
+  <link rel="icon" type="image/png" href="Logo%20(2).png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background-color: #fffaf0; font-family: 'Inter', sans-serif; margin: 0; padding: 0; color: #333; }
@@ -39,7 +39,7 @@
 
 <header>
   <div class="flex items-center">
-    <img src="https://placehold.co/50x50/7851A9/FFFFFF?text=CC" alt="Chronex Classes Logo" />
+    <img src="Logo%20(2).png" alt="Chronex Classes Logo" />
     <h2>Chronex Classes</h2>
   </div>
   <div class="hamburger" onclick="toggleMenu()"><div></div><div></div><div></div></div>
