--- a/Resources.html
+++ b/Resources.html
@@ -9,7 +9,6 @@
   <meta name="msapplication-TileColor" content="#e8d4f3">
   <!-- Corrected Icon Path -->
   <link rel="icon" type="image/png" href="Logo%20(2).png" />
-  
   <!-- Load Tailwind CSS for modern, responsive styling -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -236,7 +235,7 @@
 
 <main class="container">
   <h1 class="text-3xl sm:text-4xl text-center mt-2 mb-4 font-extrabold text-[#7851a9]">
-    📚 Essential Physics Resources
+    Essential Physics Resources
   </h1>
   <p class="text-center text-lg mb-8">
     Access our curated list of key textbooks and practice materials, completely free to support your learning journey.
