--- a/Resources.html
+++ b/Resources.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#e8d4f3">
   <!-- Corrected Icon Path -->
-  <link rel="icon" type="image/png" href="Logo%20(2).png" />
+  <link rel="icon" type="image/png" href="Logo_2.png" />
   <!-- Load Tailwind CSS for modern, responsive styling -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -206,7 +206,7 @@
 <header class="shadow-md">
   <div class="flex items-center">
     <!-- Standardized placeholder logo -->
-    <img src="Logo%20(2).png" alt="Chronex Classes Logo" />
+    <img src="Logo_2.png" alt="Chronex Classes Logo" />
     <h2>Chronex Classes</h2>
   </div>
 
