--- a/Courses.html
+++ b/Courses.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#e8d4f3">
   <!-- Corrected Icon Path -->
-  <link rel="icon" type="image/png" href="Logo_2.png" />
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/chronex-classes/chronex-classes.github.io/main/Logo_2.png" />
   
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -239,7 +239,7 @@
 <header class="shadow-md">
   <div class="flex items-center">
     <!-- Standardized placeholder logo -->
-    <img src="Logo_2.png" alt="Chronex Classes Logo" />
+    <img src="https://raw.githubusercontent.com/chronex-classes/chronex-classes.github.io/main/Logo_2.png" alt="Chronex Classes Logo" />
     <h2>Chronex Classes</h2>
   </div>
 
