--- a/Study.html
+++ b/Study.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#e8d4f3">
   <!-- Corrected Icon Path -->
-  <link rel="icon" type="image/png" href="Logo_2.png" />
+  <link rel="icon" type="image/png" href="Logo_2.png?v=20251014" />
   
   <!-- Load Tailwind CSS for modern, responsive styling -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -183,7 +183,7 @@
     <header>
   <div class="flex items-center">
     <!-- Standardized placeholder logo -->
-    <img src="Logo_2.png" alt="Chronex Classes Logo" />
+    <img src="Logo_2.png?v=20251014" alt="Chronex Classes Logo" />
     <h2>Chronex Classes</h2>
   </div>
 
