--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -124,6 +124,28 @@
       <button onclick="openFullscreen('H3wb6QJTMb0', 3)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
     </div>
 
+   <!-- LECTURE 4 -->
+    <div class="study-card relative p-6 flex flex-col items-start bg-white rounded-xl shadow-lg transition duration-300" data-lecture-id="4" style="border-top: 5px solid #7851a9;">
+      <label class="absolute top-2 right-2 cursor-pointer flex items-center justify-center">
+        <input type="checkbox" class="peer hidden lecture-checkbox" data-lecture="4"/>
+        <div class="w-6 h-6 rounded-full border-2 border-[#7851a9] flex items-center justify-center transition duration-200 peer-checked:bg-green-500 peer-checked:border-green-500">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-white hidden peer-checked:block" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 00-1.414 0L8 12.586 4.707 9.293A1 1 0 003.293 10.707l4 4a1 1 0 001.414 0l8-8a1 1 0 000-1.414z" clip-rule="evenodd"/>
+          </svg>
+        </div>
+      </label>
+      <div class="w-full aspect-video rounded-lg overflow-hidden mb-4 shadow-md">
+        <img src="https://raw.githubusercontent.com/chronex-classes/_chronex-core_assets/main/UM-1.png" alt="UM-4 Thumbnail" class="w-full h-full object-cover transition duration-300 hover:scale-[1.05]" />
+      </div>
+      <h2 class="text-xl font-bold text-[#7851a9] mb-2 leading-tight">Lecture 04:</h2>
+      <p class="text-gray-700 text-sm text-justify mb-2 flex-grow">This video was published on June 27, 2024.</p>
+      <div class="progress-bar-container">
+        <div id="progressBar4" class="progress-bar"></div>
+      </div>
+      <p id="progressText4" class="progress-text">0% Watched</p>
+      <button onclick="openFullscreen('uPkpNPRFuIw', 3)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
+    </div>
+
   </div>
 </main>
 
@@ -234,3 +256,4 @@
 
 </body>
 </html>
+
