--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -49,15 +49,15 @@
 
 .close-btn {
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 10px;
   font-size: 2rem;
   color: white;
   background: rgba(0,0,0,0.5);
   border: none;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -162,7 +162,7 @@
 
 <div id="fullscreen-player" class="fixed inset-0 z-[9999] bg-black bg-opacity-90 hidden">
   <div class="video-container relative" onclick="event.stopPropagation()">
-    
+    <button class="close-btn" onclick="closeFullscreen()">&times;</button>
     <div id="video-iframe-container" class="w-full h-full"></div>
   </div>
 </div>
@@ -290,6 +290,7 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
 
