--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -49,7 +49,7 @@
 
 .close-btn {
   position: absolute;
-  top: 15px;
+  top: 20px;
   right: 10px;
   font-size: 2rem;
   color: white;
@@ -82,6 +82,7 @@
   </div>
   <nav><a href="Class 11 2027-2028 chapters.html">Chapters</a></nav>
   <div id="mobileMenu" class="mobile-menu">
+    <a href="index.html">Home</a>
     <a href="Class 11 2027-2028 chapters.html">Chapters</a>
   </div>
 </header>
@@ -290,6 +291,7 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
 
