Update Class 11 2027-2028 chapters.html

--- a/Class 11 2027-2028 chapters.html
+++ b/Class 11 2027-2028 chapters.html
@@ -44,7 +44,10 @@
   </div>
   <div class="hamburger" onclick="toggleMenu()"><div></div><div></div><div></div></div>
   <nav><a href="Study.html">Academic Programs</a></nav>
-  <div id="mobileMenu" class="mobile-menu"><a href="Study.html">Academic Programs</a></div>
+  <div id="mobileMenu" class="mobile-menu">
+  <a href="index.html">Home</a>
+  <a href="Study.html">Academic Programs</a>
+  </div>
 </header>
 
 <main class="max-w-6xl mx-auto p-4 sm:p-6 mt-6">
@@ -84,3 +87,4 @@
 
 </body>
 </html>
+
