Update Class 11 2027-2028 content_1.html

--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -87,7 +87,10 @@
   <div class="hamburger" onclick="toggleMenu()">
     <div></div><div></div><div></div>
   </div>
-  <nav><a href="Class 11 2027-2028 chapters.html">Chapters</a></nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="Class 11 2027-2028 chapters.html">Chapters</a>
+  </nav>
   <div id="mobileMenu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="Class 11 2027-2028 chapters.html">Chapters</a>
@@ -302,6 +305,7 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
 
