Update Class 11 2027-2028 chapters.html

--- a/Class 11 2027-2028 chapters.html
+++ b/Class 11 2027-2028 chapters.html
@@ -43,7 +43,10 @@
     <h2>Chronex Classes</h2>
   </div>
   <div class="hamburger" onclick="toggleMenu()"><div></div><div></div><div></div></div>
-  <nav><a href="Study.html">Academic Programs</a></nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="Study.html">Academic Programs</a>
+  </nav>
   <div id="mobileMenu" class="mobile-menu">
   <a href="index.html">Home</a>
   <a href="Study.html">Academic Programs</a>
@@ -87,4 +90,5 @@
 
 </body>
 </html>
+
 
