--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -121,7 +121,7 @@
         <div id="progressBar1" class="progress-bar"></div>
       </div>
       <p id="progressText1" class="progress-text">0% Watched</p>
-      <button onclick="openFullscreen('gN0S21oOlAg', 1)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
+      <button onclick="openFullscreen('B7UdBffEPas', 1)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
     </div>
 
     <!-- LECTURE 2 -->
@@ -143,7 +143,7 @@
         <div id="progressBar2" class="progress-bar"></div>
       </div>
       <p id="progressText2" class="progress-text">0% Watched</p>
-      <button onclick="openFullscreen('aHn6gQPcAWQ', 2)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
+      <button onclick="openFullscreen('MvbnEJ5z8Rg', 2)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
     </div>
 
     <!-- LECTURE 3 -->
@@ -165,7 +165,7 @@
         <div id="progressBar3" class="progress-bar"></div>
       </div>
       <p id="progressText3" class="progress-text">0% Watched</p>
-      <button onclick="openFullscreen('H3wb6QJTMb0', 3)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
+      <button onclick="openFullscreen('BPa2aAp8xbc', 3)" class="w-full py-3 bg-[#7851a9] text-white font-bold rounded-lg hover:bg-[#5a3a7c] transition duration-200 text-lg mt-2">Watch Now</button>
     </div>
 
   </div>
