--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -32,28 +32,42 @@
     .study-card.completed { border-top-color: #16a34a !important; box-shadow: 0 0 20px rgba(34,197,94,0.3); transition: all 0.3s ease-in-out; }
     footer { background-color: #7851a9; color: white; text-align: center; padding: 12px; margin-top: 40px; font-size: 14px; }
 
-    /* Landscape video wrapper */
-    .video-wrapper {
-      position: relative;
-      width: 100%;
-      max-width: 95vw;
-      padding-top: 56.25%; /* 16:9 ratio */
-      margin: auto;
-    }
-    .video-wrapper iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      border-radius: 12px;
+    /* 🚩 CRITICAL FIX: New responsive video sizing for full-screen view */
+    .video-container {
+        /* This container limits the max size of the player on large screens */
+        width: 100%;
+        max-width: 1000px; 
+        max-height: 100vh; /* Allow full viewport height */
+        position: relative;
     }
 
-    /* 🚩 FIXED: Prevents video container from pushing down and cutting off the bottom */
-    .video-container {
-        width: 95%; /* Adjust width for smaller screens */
-        max-width: 1000px; /* Max width for large screens */
-        max-height: 95vh; /* Restricts height to 95% of viewport height */
-        /* Removed margin: 5% auto; which caused the empty space at the top and the cutoff */
+    .video-wrapper {
+        /* This wrapper ensures the 16:9 ratio and fits within the screen */
+        position: relative;
+        width: 100%;
+        height: 0; /* Reset height */
+        padding-top: 56.25%; /* 16:9 Aspect Ratio (9 / 16 * 100) */
+        max-width: 100vw;
+        max-height: 95vh; /* Limit to 95% of viewport height */
     }
+    
+    .video-wrapper iframe {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        border-radius: 12px;
+    }
+    
+    /* Media query to ensure it fits better in portrait mobile view */
+    @media (orientation: portrait) {
+        .video-wrapper {
+            /* For tall screens, prioritize maximum width */
+            padding-top: 56.25%; /* Maintain ratio */
+            width: 95vw;
+            max-height: 80vh; /* Give more margin for browser bars */
+        }
+    }
+
 
 .close-btn {
   position: absolute;
@@ -169,7 +183,6 @@
   </div>
 </main>
 
-<!-- 🚩 FIXED: Added flex, justify-center, and items-center to center the video vertically and horizontally -->
 <div id="fullscreen-player" class="fixed inset-0 z-[9999] bg-black bg-opacity-90 hidden flex justify-center items-center">
   <div class="video-container relative" onclick="event.stopPropagation()">
     <button class="close-btn" onclick="closeFullscreen()">&times;</button>
