--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -32,43 +32,50 @@
     .study-card.completed { border-top-color: #16a34a !important; box-shadow: 0 0 20px rgba(34,197,94,0.3); transition: all 0.3s ease-in-out; }
     footer { background-color: #7851a9; color: white; text-align: center; padding: 12px; margin-top: 40px; font-size: 14px; }
 
-    /* 🚩 CRITICAL FIX: New responsive video sizing for full-screen view */
-    .video-container {
-        /* This container limits the max size of the player on large screens */
-        width: 100%;
-        max-width: 1000px; 
-        max-height: 100vh; /* Allow full viewport height */
-        position: relative;
-    }
+.video-container {
+width: 95vw;
+max-width: 1000px;
+max-height: 85vh;
+position: relative;
+display: flex;
+align-items: center;
+justify-content: center;
+}
 
-    .video-wrapper {
-        /* This wrapper ensures the 16:9 ratio and fits within the screen */
-        position: relative;
-        width: 100%;
-        height: 0; /* Reset height */
-        padding-top: 56.25%; /* 16:9 Aspect Ratio (9 / 16 * 100) */
-        max-width: 100vw;
-        max-height: 90vh; /* Limit to 95% of viewport height */
-    }
+
+.video-wrapper {
+position: relative;
+width: 100%;
+height: auto;
+aspect-ratio: 16 / 9;
+overflow: hidden;
+}
+
+
+.video-wrapper iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+display: block;
+}
+
+
+@media (orientation: portrait) {
+.video-container {
+width: 100vw;
+max-width: 100%;
+max-height: 60vh; /* smaller height for mobile */
+}
+
+
+.video-wrapper {
+aspect-ratio: 16 / 9;
+}
+}
     
-    .video-wrapper iframe {
-        position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        border-radius: 12px;
-    }
-    
-    /* Media query to ensure it fits better in portrait mobile view */
-    @media (orientation: portrait) {
-        .video-wrapper {
-            /* For tall screens, prioritize maximum width */
-            padding-top: 56.25%; /* Maintain ratio */
-            width: 95vw;
-            max-height: 80vh; /* Give more margin for browser bars */
-        }
-    }
-
-
 .close-btn {
   position: absolute;
   top: 10px;
@@ -336,4 +343,5 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
