Restore original HTML content for Class 11 page
Restored the original HTML structure and content for the Class 11 Physical World page.

--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -78,15 +78,15 @@ aspect-ratio: 16 / 9;
     
 .close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 7px;
+  right: 3px;
   font-size: 2rem;
   color: white;
   background: rgba(0,0,0,0.5);
   border: none;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 25px;
+  height: 25-px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -343,5 +343,6 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
