Update Class 11 2027-2028 content_1.html

--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -78,15 +78,15 @@ aspect-ratio: 16 / 9;
     
 .close-btn {
   position: absolute;
-  top: 7px;
+  top: 3px;
   right: 3px;
-  font-size: 2rem;
+  font-size: 1rem;
   color: white;
   background: rgba(0,0,0,0.5);
   border: none;
   border-radius: 50%;
   width: 25px;
-  height: 25-px;
+  height: 25px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -343,6 +343,7 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
 
