--- a/Class 11 2027-2028 content_1.html
+++ b/Class 11 2027-2028 content_1.html
@@ -198,7 +198,7 @@ aspect-ratio: 16 / 9;
         </div>
       </label>
       <div class="w-full aspect-video rounded-lg overflow-hidden mb-4 shadow-md">
-        <img src="https://raw.githubusercontent.com/chronex-classes/_chronex-core_assets/main/UM-1.png" alt="UM-1 Thumbnail" class="w-full h-full object-cover transition duration-300 hover:scale-[1.05]" />
+        <img src="https://raw.githubusercontent.com/chronex-classes/_chronex-core_assets/main/UM-1.png" alt="UM-1 Thumbnail" class="w-full h-full object-fit contain transition duration-300 hover:scale-[1.05]" />
       </div>
       <h2 class="text-xl font-bold text-[#7851a9] mb-2 leading-tight">Lecture 04:</h2>
       <p class="text-gray-700 text-sm text-justify mb-2 flex-grow">This video was published on January 12, 2025.</p>
@@ -366,6 +366,7 @@ function openFullscreen(videoId, lectureId) {
 
 </body>
 </html>
+
 
 
 
